# learn_llm

./: .gitignore  main.py  pyproject.toml
basicdl/: linearregression.ipynb  preliminaries.ipynb
data/: .gitignore
transformer/: qwenbaserun.py  qwenlearn.py  qwenpull.py  simple_bpe_tokenizer.py  tokenizer_comparison.py
