[project]
name = "learn-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.10.1",
    "huggingface-hub[hf-transfer]>=0.34.4",
    "ipykernel>=6.30.1",
    "ipython>=9.5.0",
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "pip>=25.2",
    "torch>=2.8.0",
    "transformers>=4.56.1",
]
